Bug 1610383 - Restrict BufferData size to int32_t for ANGLE. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D60778